tests/fixtures/invalid/semantic/method_in_local_block.pine
//@version=6
indicator("Bad")
type Foo
    int x
if true
    method get(Foo this) => this.x
